# hephaestus-base

./: .gitignore  .project  README  README.md  cabal.sandbox.config  hephaestus.cabal
asset-base/bpmn/: LICENSE  bpmn.cabal
configuration-knowledge/benchmarks/: Main.hi  Main.hs  compile-profile.sh  compile.sh  project.properties
configuration-knowledge/src/: CK.cf  CK.cf~  Makefile.bak
core/: GenericHXTParser.hs~
core/src/: BasicTypes.hi  BasicTypes.hs  BasicTypes.hs~  TestBasicTypes.hs~
feature-modeling/benchmarks/: Bench100.hi  Bench500.lhs~  BenchToCNF.hi  BenchToCNF.lhs~
feature-modeling/src/: FeatureIDE.cf  Makefile
main/: Makefile  compile-win.bat  compile.sh  compileCodeVersion.sh  compileGUI.sh
main/src/: CKEditor  CKEditor.hs  ExportProduct.hi  ExportProduct.hs  ExportProduct.hs~  Main.hs  VMCode.hs  VMGui.hi  VMGui.lhs  VMGui.lhs~  ck.glade  project.properties  start-ghci-win.bat  start-ghci.sh  use-cases.xml  vm.glade
samples/Basic/: configurationModel.xml  featureModel.xml  instanceModel.xml
samples/CCM/: ucModel.xml
samples/EPL-simple/: .classpath  .project  configurationModel.xml  featureModel.xml  instanceModel01.xml  instanceModel02.xml  instanceModel03.xml
samples/HomeBanking/: configurationModel.xml  schema_aspectual-use_cases-user_view.rng  ucModel.xml
samples/MobileMedia/: componentModel.txt  productConfiguration01.xml
samples/MobileMedia3/: schema_feature-model.rng
samples/TaRGeT-20100128/: FeatureModel.xml~  InstanceMode1lLabPS1CNL.xml  InstanceModel01.xml  InstanceModel01.xml~  InstanceModel02.xml  InstanceModel04.xml  (+11 more)
(+260 files in other folders)
